--- a/readme
+++ b/readme
@@ -5,5 +5,7 @@ I just put the script in my youtube-dl folder and it just works.
 Files are stored in a Folder called BOOTY in the same directory as the script.
 You can then rename the folders for instance if you are getting an entire playlist just copy paste the name over the BOOTY folder and youre golden.
 
-Pro tip: You can go to a channel > go to uploads > then copy the link of the playlist and now you can download the entire channels uploads as a playlist. Video or Audio of course.
+Pro tip: You can go to a channel > go to uploads > then copy the link of the playlist and now you can download the entire channels uploads as a playlist. 
+Video or Audio of course.
 
+Don't blow up this spot. Share with pirates or keep it secret.
